fix: remove blockquote overflow in dark mode closes issue #3

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -11,7 +11,6 @@
 
 html.dark .prose blockquote {
   color: #fff;
-  width: 100%;
 }
 
 html:not(.dark) .prose {
